8.10.0/STYLE/wDL.md
### <div id="wdl">下拉選項 <path>(元件)</path></div>
* 類型代碼 : wDL

### <div id="wdl_title">標題Title <path>(元件\下拉選項)</path></div>
標題樣式。

* 狀態代碼 : Title
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* ~~`超連結`~~
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* ~~`內間距`~~
	* ~~`外邊距`~~
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_enable">致能Enable <path>(元件\下拉選項)</path></div>
元件未駐留時的樣式。

* 狀態代碼 : Enable
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* ~~`超連結`~~
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* ~~`內間距`~~
	* ~~`外邊距`~~
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_onfocus">駐留OnFocus <path>(元件\下拉選項)</path></div>
元件駐留時的樣式。

* 狀態代碼 : OnFocus
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* ~~`超連結`~~
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* ~~`內間距`~~
	* ~~`外邊距`~~
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_mousein">滑鼠移入MouseIn <path>(元件\下拉選項)</path></div>
元件未駐留時，滑鼠移至<內容區>時的樣式。

* 狀態代碼 : MouseIn
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* ~~`超連結`~~
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* ~~`內間距`~~
	* ~~`外邊距`~~
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_itemlist">選項清單ItemList <path>(元件\下拉選項)</path></div>
下拉清單。

* 狀態代碼 : ItemList
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* ~~`超連結`~~
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* ~~`內間距`~~
	* ~~`外邊距`~~
	* ~~`列底色`~~
	* ~~`內框線`~~
	* `光棒`
		* `線條`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
		* `底色`
			* `顏色`
			* `透明度`
			* `漸層色`
			* `漸層方向`
	* ~~`圖示設定`~~

### <div id="wdl_displayenable">顯示Enable <path>(元件\下拉選項)</path></div>
元件未駐留時的樣式。

* 狀態代碼 : DisplayEnable
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* `超連結`
			* `點擊前`
			* `點擊後`
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* ~~`內間距`~~
	* ~~`外邊距`~~
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_displayonfocus">顯示駐留OnFocus <path>(元件\下拉選項)</path></div>
元件駐留時的樣式。

* 狀態代碼 : DisplayOnFocus
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* `超連結`
			* `點擊前`
			* `點擊後`
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* ~~`內間距`~~
	* ~~`外邊距`~~
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_displaymousein">顯示滑鼠移入MouseIn <path>(元件\下拉選項)</path></div>
元件未駐留時，滑鼠移至<內容區>時的樣式。

* 狀態代碼 : DisplayMouseIn
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* `超連結`
			* `點擊前`
			* `點擊後`
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* ~~`內間距`~~
	* ~~`外邊距`~~
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_mobile_title">(RWD)標題Title <path>(元件\下拉選項)</path></div>
標題樣式。

* 狀態代碼 : mobile_Title
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* ~~`超連結`~~
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* `內間距`
		* `上`
		* `下`
		* `左`
		* `右`
	* ~~`外邊距`~~
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_mobile_enable">(RWD)致能Enable <path>(元件\下拉選項)</path></div>
元件未駐留時的樣式。

* 狀態代碼 : mobile_Enable
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* ~~`超連結`~~
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* `內間距`
		* `上`
		* `下`
		* `左`
		* `右`
	* `外邊距`
		* `上`
		* `下`
		* `左`
		* `右`
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_mobile_onfocus">(RWD)駐留OnFocus <path>(元件\下拉選項)</path></div>
元件駐留時的樣式。

* 狀態代碼 : mobile_OnFocus
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* ~~`超連結`~~
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* `內間距`
		* `上`
		* `下`
		* `左`
		* `右`
	* `外邊距`
		* `上`
		* `下`
		* `左`
		* `右`
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_mobile_mousein">(RWD)滑鼠移入MouseIn <path>(元件\下拉選項)</path></div>
元件未駐留時，滑鼠移至<內容區>時的樣式。

* 狀態代碼 : mobile_MouseIn
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* ~~`超連結`~~
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* `內間距`
		* `上`
		* `下`
		* `左`
		* `右`
	* `外邊距`
		* `上`
		* `下`
		* `左`
		* `右`
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_mobile_itemlist">(RWD)選項清單ItemList <path>(元件\下拉選項)</path></div>
下拉清單。

* 狀態代碼 : mobile_ItemList
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* ~~`超連結`~~
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* ~~`內間距`~~
	* ~~`外邊距`~~
	* ~~`列底色`~~
	* ~~`內框線`~~
	* `光棒`
		* `線條`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
		* `底色`
			* `顏色`
			* `透明度`
			* `漸層色`
			* `漸層方向`
	* ~~`圖示設定`~~

### <div id="wdl_mobile_displayenable">(RWD)顯示Enable <path>(元件\下拉選項)</path></div>
元件為僅供顯示且未駐留時的樣式。

* 狀態代碼 : mobile_DisplayEnable
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* `超連結`
			* `點擊前`
			* `點擊後`
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* `內間距`
		* `上`
		* `下`
		* `左`
		* `右`
	* `外邊距`
		* `上`
		* `下`
		* `左`
		* `右`
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_mobile_displayonfocus">(RWD)顯示駐留OnFocus <path>(元件\下拉選項)</path></div>
元件為僅供顯示且元件駐留時的樣式。

* 狀態代碼 : mobile_DisplayOnFocus
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* `超連結`
			* `點擊前`
			* `點擊後`
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* `內間距`
		* `上`
		* `下`
		* `左`
		* `右`
	* `外邊距`
		* `上`
		* `下`
		* `左`
		* `右`
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_mobile_displaymousein">(RWD)顯示滑鼠移入MouseIn <path>(元件\下拉選項)</path></div>
元件為僅供顯示且元件未駐留時，滑鼠移至<內容區>時的樣式。

* 狀態代碼 : mobile_DisplayMouseIn
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* `超連結`
			* `點擊前`
			* `點擊後`
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* `內間距`
		* `上`
		* `下`
		* `左`
		* `右`
	* `外邊距`
		* `上`
		* `下`
		* `左`
		* `右`
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_mobile_enable_multi">(RWD)多選致能Enable_Multi <path>(元件\下拉選項)</path></div>
元件為複選時，已選取選項的樣式。(未完成)

* 狀態代碼 : Enable_Multi
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* `超連結`
			* `點擊前`
			* `點擊後`
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* `內間距`
		* `上`
		* `下`
		* `左`
		* `右`
	* `外邊距`
		* `上`
		* `下`
		* `左`
		* `右`
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~

### <div id="wdl_mobile_displayenable_multi">(RWD)多選顯示致能DisplayEnable_Multi <path>(元件\下拉選項)</path></div>
元件為僅供顯示且元件為複選時，已選取選項的樣式。(未完成)

* 狀態代碼 : mobile_DisplayEnable_Multi
* 支援項目
	* `底色`
		* `顏色`
		* `透明度`
		* `漸層色`
		* `漸層方向`
	* `內容`
		* `文字顏色`
		* `透明度`
		* `字型`
		* `字型大小`
		* `水平`
			* 水平對齊 : 單元樣式 > 主題樣式 >  數字模板(內容靠右) > 預設樣式。
		* `垂直`
		* `字型樣式`
			* `粗體`
			* `斜體`
			* `底線`
			* `刪除線`
		* `超連結`
			* `點擊前`
			* `點擊後`
	* `框線`
		* `線條`
		* `圓角`
		* `上框線`
			* `寬度`
			* `顏色`
		* `下框線`
			* `寬度`
			* `顏色`
		* `左框線`
			* `寬度`
			* `顏色`
		* `右框線`
			* `寬度`
			* `顏色`
	* `內間距`
		* `上`
		* `下`
		* `左`
		* `右`
	* `外邊距`
		* `上`
		* `下`
		* `左`
		* `右`
	* ~~`列底色`~~
	* ~~`內框線`~~
	* ~~`光棒`~~
	* ~~`圖示設定`~~
